复制网址跳转首页以及狮子座样式

--- a/css/constellation.css
+++ b/css/constellation.css
@@ -214,7 +214,7 @@ body,
 }
 
 .Leo-fate-bg {
-    background: #4a2d75 url('../images/shizi-t-bg.png') repeat-y;
+    background: #4a2d75;
 }
 
 .Leo-logo {
