--- a/css/constellation.css
+++ b/css/constellation.css
@@ -83,9 +83,22 @@ body,
     color: #fff;
     font-size: 20px;
 }
-
-
-
+/* 分享遮罩 */
+#share {
+    width: 100%;
+    height: 1000px;
+    background:rgba(0, 0, 0, 0.8);
+    position:fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    text-align: center;
+    padding-top: 30px;
+    display: none;
+}
+.share-img{
+    width:80%;
+}
 /* 白羊座样式 */
 
 .Aries-bg {
